# mail_notifier

./: .env  .gitignore  README.RU.md  README.md  config.yaml  main.py  pyproject.toml
src/: mail_notifier.py
tests/: conftest.py  test_configs.py  test_mail_checker.py  test_tray_icon.py
